<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">观音灵签</string>
    <string name="app_version">版本：2.0.906</string>
    <string name="action_settings">设置</string>
    <string name="cupdesc">需要连续掷出3次圣杯，此签才算灵签。</string>
    <string name="pelt_cup_count">您已掷%d次圣杯.</string>
    <string name="pelt_cup_no">必须掷出3次圣杯，请重新抽签.</string>
    <string name="type_three_word">请输入三个汉字</string>
    <string name="start_anys">开始测字</string>
    <string name="type_three_tip">问天问地问自己，三字便知玄机</string>  
    <string name="btn_back">返回</string>  
    <string name="btn_almanac_query">黄历查询</string>
    <string name="btn_compatibility_query">宜忌查询</string>
    <string name="btn_wedding_query">结婚吉日</string>
    <string name="btn_select_date">选择月份</string>
    <string name="btn_select_yiji">选择宜忌</string>
    <string name="btn_query">查询</string>
    <string name="label_suici">【岁次】</string>
    <string name="label_wuhang">【五行】</string>
    <string name="label_tszf">【胎神占方】</string>
    <string name="label_pzbj">【彭祖百忌】</string>
    <string name="label_cong">【今日冲煞】</string>
    <string name="label_cong_simple">【冲】</string>
    <string name="label_yi">【宜】</string>
    <string name="label_ji">【忌】</string>
    <string name="label_jsyq">【吉神宜趋】</string>
    <string name="label_xsyj">【凶神宜忌】</string>
    <string name="label_lunar">【农历】</string>
    <string name="label_guayu">【卦语】</string>
    <string name="label_guishi">【贵事】</string>
    <string name="label_shiyi">【释义】</string>
    <string name="label_jieyue">【解曰】</string>
    <string name="label_xianji">【仙机】</string>
    <string name="label_nodata">哎呀呀，人家还没记住那么多嘛，等待下次更新吧。</string>
    <string name="btn_jiemeng">解梦</string>
    <string name="label_jiemenglbl">请输入梦到的关键字：</string>
    <string name="update_history">更新历史</string>
    <string name="history_content">
版本:2.3.911\n
1.增加“周公解梦”内容，整合目前市场上流行的周公解梦中梦境的描述。
版本:V2.0.906 \n
1.添加"周公解梦"内容;\n
2.增加"测字"内容;\n
3.更新灵签解读内容以及相关释义.\n
版本:V1.0.1 \n
1.添加抽签功能.\n
</string>
<string name="lbl_about">关于</string>
<string name="label_sure">确  定</string>
</resources>