<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  
    android:background="#99000000"
    android:paddingLeft="8sp"    
    android:paddingRight="8sp"      
    >
    <LinearLayout 
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"        
        android:background="#FF000000"
    >
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lbl_about" style="@style/about_text"/>
	    <ImageView android:layout_width="fill_parent" android:layout_height="2dip" android:src="@drawable/split_line"  android:layout_margin="4sp"/>
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" style="@style/about_text" />
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_version" style="@style/about_text"/>    
	    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/update_history" style="@style/about_text"/>
	    <ScrollView 
	        android:layout_width="fill_parent"
	        android:padding="16sp"
	        android:layout_height="wrap_content">
	        <TextView
	            android:id="@+id/tvUpdate"
	            android:text="@string/history_content"
	            android:textColor="#FFFFFFFF"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
	    </ScrollView>	    
	    <LinearLayout android:background="#FFFFFFFF" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center">
	        <Button android:id="@+id/btnClose" android:layout_width="wrap_content" android:text="@string/label_sure" android:layout_height="wrap_content" android:layout_margin="4sp" />
	    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
