<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/check_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip">
        <Button android:textSize="18.0sp" android:textColor="#a0000000" android:id="@+id/btn_almanac_query" android:background="@drawable/btn_style2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/btn_almanac_query" android:layout_weight="1.0" />
        <Button android:textSize="18.0sp" android:textColor="#a0000000" android:id="@+id/btn_compatibility_query" android:background="@drawable/btn_style2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/btn_compatibility_query" android:layout_weight="1.0" />
        <Button android:textSize="18.0sp" android:textColor="#a0000000" android:id="@+id/btn_wedding_query" android:background="@drawable/btn_style2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/btn_wedding_query" android:layout_weight="1.0" />
    </LinearLayout>
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/seperate_line" />
    <TextView android:gravity="center" android:id="@+id/tv_date" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Large.Inverse" />
    <ScrollView android:scrollbarThumbVertical="@drawable/scrollbar_vertical_thumb" android:scrollbarStyle="outsideInset" android:id="@+id/scrollview" android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:scrollbars="vertical" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_lunar" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_lunar" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_suici" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_suici" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_wuhang" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_wuhang" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_tszf" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_tszf" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_pzbj" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_pzbj" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_cong" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_cong" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_yi" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_yi" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_ji" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_ji" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_jsyq" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_jsyq" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:textColor="#ff963719" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/label_xsyj" style="@android:style/TextAppearance.Medium.Inverse" />
            <TextView android:id="@+id/tv_xsyj" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/TextAppearance.Medium.Inverse" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/AdLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"        
        >        
    </LinearLayout>
</LinearLayout>
